--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
     "sourceMap": true, /* Generates corresponding '.map' file. */
     "declaration": true, /* Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-    "outFile": "D:/DATA/Projects/dogs/assets/scripts/deps/5.gcccomps.js", /* Concatenate and emit output to single file. */
+    // "outFile": "D:/DATA/Projects/pockme/assets/scripts/deps/5.gcccomps.js", /* Concatenate and emit output to single file. */
     // "outFile": "E:/Libs/dogs/assets/scripts/deps/gcccomps.js", /* Concatenate and emit output to single file. */
     // "outFile": "D:/DATA/Projects/ECSWithBox2DGame/src/deps/gcccomps.js",                       /* Concatenate and emit output to single file. */
-    // "outFile": "./dist/gcccomps.js",                       /* Concatenate and emit output to single file. */
+    "outFile": "./dist/gcccomps.js",                       /* Concatenate and emit output to single file. */
     // "outDir": "./",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
@@ -67,6 +67,7 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
-    "./dist"
+    "./dist",
+    "./cccomps",
   ]
 }
