--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "outFile": "./dist/gcccomps.js",                       /* Concatenate and emit output to single file. */
     // "outDir": "./",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    // "composite": true,                     /* Enable project compilation */
+    "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     // "removeComments": true,                /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
@@ -66,6 +66,16 @@
     "skipLibCheck": true, /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
+  "references": [
+    {"path": "./src/common"},
+    {"path": "./src/resloader"},
+    {"path": "./src/respool"},
+    {"path": "./src/prefab"},
+    {"path": "./src/uit"},
+    {"path": "./src/box2d"},
+  ],
+  "include": [
+  ],
   "exclude": [
     "./dist",
     "./cccomps",
